// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admission Status [GET] /courses/{courseId}/admission-status 1`] = `
[
  {
    "fulfillsAdmissionCriteria": false,
    "hasAdmission": false,
    "hasAdmissionFromPreviousSemester": false,
    "participant": {
      "displayName": "Max Mustermann",
      "email": "max.mustermann@test.com",
      "matrNr": 123456,
      "role": "STUDENT",
      "userId": "a019ea22-5194-4b83-8d31-0de0dc9bca53",
      "username": "mmustermann",
    },
    "results": [
      {
        "_assignmentType": "HOMEWORK",
        "_rule": "REQUIRED_PERCENT_OVERALL",
        "achievedPercent": 75,
        "achievedPoints": 75,
        "passed": true,
      },
      {
        "_assignmentType": "TESTAT",
        "_rule": "REQUIRED_PERCENT_OVERALL",
        "achievedPercent": 25,
        "achievedPoints": 25,
        "passed": false,
      },
      {
        "_assignmentType": "HOMEWORK",
        "_rule": "INDIVIDUAL_PERCENT_WITH_ALLOWED_FAILURES",
        "achievedPercent": 0,
        "achievedPoints": 0,
        "passed": true,
      },
    ],
  },
  {
    "fulfillsAdmissionCriteria": false,
    "hasAdmission": false,
    "hasAdmissionFromPreviousSemester": false,
    "participant": {
      "displayName": "Hans Peter",
      "email": "hans.peter@test.com",
      "matrNr": 111111,
      "role": "STUDENT",
      "userId": "40f59aad-7473-4455-a3ea-1214f19b2565",
      "username": "hpeter",
    },
    "results": [
      {
        "_assignmentType": "HOMEWORK",
        "_rule": "REQUIRED_PERCENT_OVERALL",
        "achievedPercent": 75,
        "achievedPoints": 75,
        "passed": true,
      },
      {
        "_assignmentType": "TESTAT",
        "_rule": "REQUIRED_PERCENT_OVERALL",
        "achievedPercent": 0,
        "achievedPoints": 0,
        "passed": false,
      },
      {
        "_assignmentType": "HOMEWORK",
        "_rule": "INDIVIDUAL_PERCENT_WITH_ALLOWED_FAILURES",
        "achievedPercent": 0,
        "achievedPoints": 0,
        "passed": true,
      },
    ],
  },
  {
    "fulfillsAdmissionCriteria": false,
    "hasAdmission": false,
    "hasAdmissionFromPreviousSemester": false,
    "participant": {
      "displayName": "elshar",
      "email": "elshar@test.com",
      "matrNr": 777777,
      "role": "STUDENT",
      "userId": "3e52e822-4ebc-49c3-94e2-06ba447b5d1f",
      "username": "elshar",
    },
    "results": [
      {
        "_assignmentType": "HOMEWORK",
        "_rule": "REQUIRED_PERCENT_OVERALL",
        "achievedPercent": 0,
        "achievedPoints": 0,
        "passed": false,
      },
      {
        "_assignmentType": "TESTAT",
        "_rule": "REQUIRED_PERCENT_OVERALL",
        "achievedPercent": 0,
        "achievedPoints": 0,
        "passed": false,
      },
      {
        "_assignmentType": "HOMEWORK",
        "_rule": "INDIVIDUAL_PERCENT_WITH_ALLOWED_FAILURES",
        "achievedPercent": 50,
        "achievedPoints": 1,
        "passed": true,
      },
    ],
  },
  {
    "fulfillsAdmissionCriteria": false,
    "hasAdmission": false,
    "hasAdmissionFromPreviousSemester": false,
    "participant": {
      "displayName": "kunold",
      "email": "kunold@test.com",
      "matrNr": 888888,
      "role": "STUDENT",
      "userId": "24b4ec8c-dd8a-4bd6-843c-2c412fb1d5b7",
      "username": "kunold",
    },
    "results": [
      {
        "_assignmentType": "HOMEWORK",
        "_rule": "REQUIRED_PERCENT_OVERALL",
        "achievedPercent": 0,
        "achievedPoints": 0,
        "passed": false,
      },
      {
        "_assignmentType": "TESTAT",
        "_rule": "REQUIRED_PERCENT_OVERALL",
        "achievedPercent": 0,
        "achievedPoints": 0,
        "passed": false,
      },
      {
        "_assignmentType": "HOMEWORK",
        "_rule": "INDIVIDUAL_PERCENT_WITH_ALLOWED_FAILURES",
        "achievedPercent": 50,
        "achievedPoints": 1,
        "passed": true,
      },
    ],
  },
]
`;

exports[`Admission Status [GET] /courses/{courseId}/admission-status/{userId} 1`] = `
{
  "fulfillsAdmissionCriteria": false,
  "hasAdmission": false,
  "hasAdmissionFromPreviousSemester": false,
  "participant": {
    "displayName": "Max Mustermann",
    "email": "max.mustermann@test.com",
    "matrNr": 123456,
    "role": "STUDENT",
    "userId": "a019ea22-5194-4b83-8d31-0de0dc9bca53",
    "username": "mmustermann",
  },
  "results": [
    {
      "_assignmentType": "HOMEWORK",
      "_rule": "REQUIRED_PERCENT_OVERALL",
      "achievedPercent": 75,
      "achievedPoints": 75,
      "passed": true,
    },
    {
      "_assignmentType": "TESTAT",
      "_rule": "REQUIRED_PERCENT_OVERALL",
      "achievedPercent": 25,
      "achievedPoints": 25,
      "passed": false,
    },
    {
      "_assignmentType": "HOMEWORK",
      "_rule": "INDIVIDUAL_PERCENT_WITH_ALLOWED_FAILURES",
      "achievedPercent": 0,
      "achievedPoints": 0,
      "passed": true,
    },
  ],
}
`;

exports[`Admission Status [GET] /courses/{courseId}/admission-status/overview 1`] = `
{
  "assignments": [
    {
      "collaboration": "GROUP_OR_SINGLE",
      "endDate": "2020-05-10T22:00:00.000Z",
      "id": "c2bc4aa4-6207-11ea-bc55-0242ac130003",
      "name": "Test_Assignment 04 (Java)",
      "points": 100,
      "startDate": "2020-05-03T22:00:00.000Z",
      "state": "EVALUATED",
      "type": "HOMEWORK",
    },
    {
      "collaboration": "SINGLE",
      "endDate": "2020-04-26T22:00:00.000Z",
      "id": "75b799a1-a406-419b-a448-909aa3d34afa",
      "name": "Test_Assignment 07 (Java) Testat Evaluated",
      "points": 100,
      "startDate": "2020-04-19T22:00:00.000Z",
      "state": "EVALUATED",
      "type": "TESTAT",
    },
  ],
  "results": [
    {
      "achievedPoints": [
        75,
        25,
      ],
      "assessmentIds": [
        "8f60f844-4129-48a4-a625-7a74c7defd0d",
        "932c7bd8-2338-4e60-955a-39da5f858212",
      ],
      "student": {
        "displayName": "Max Mustermann",
        "email": "max.mustermann@test.com",
        "matrNr": 123456,
        "role": "STUDENT",
        "userId": "a019ea22-5194-4b83-8d31-0de0dc9bca53",
        "username": "mmustermann",
      },
    },
    {
      "achievedPoints": [
        75,
        null,
      ],
      "assessmentIds": [
        "8f60f844-4129-48a4-a625-7a74c7defd0d",
        null,
      ],
      "student": {
        "displayName": "Hans Peter",
        "email": "hans.peter@test.com",
        "matrNr": 111111,
        "role": "STUDENT",
        "userId": "40f59aad-7473-4455-a3ea-1214f19b2565",
        "username": "hpeter",
      },
    },
    {
      "achievedPoints": [
        null,
        null,
      ],
      "assessmentIds": [
        null,
        null,
      ],
      "student": {
        "displayName": "elshar",
        "email": "elshar@test.com",
        "matrNr": 777777,
        "role": "STUDENT",
        "userId": "3e52e822-4ebc-49c3-94e2-06ba447b5d1f",
        "username": "elshar",
      },
    },
    {
      "achievedPoints": [
        null,
        null,
      ],
      "assessmentIds": [
        null,
        null,
      ],
      "student": {
        "displayName": "kunold",
        "email": "kunold@test.com",
        "matrNr": 888888,
        "role": "STUDENT",
        "userId": "24b4ec8c-dd8a-4bd6-843c-2c412fb1d5b7",
        "username": "kunold",
      },
    },
  ],
}
`;

exports[`Admission Status [GET] /courses/{courseId}/admission-status/overview/{userId} 1`] = `
{
  "assignments": [
    {
      "collaboration": "GROUP_OR_SINGLE",
      "endDate": "2020-05-10T22:00:00.000Z",
      "id": "c2bc4aa4-6207-11ea-bc55-0242ac130003",
      "name": "Test_Assignment 04 (Java)",
      "points": 100,
      "startDate": "2020-05-03T22:00:00.000Z",
      "state": "EVALUATED",
      "type": "HOMEWORK",
    },
    {
      "collaboration": "SINGLE",
      "endDate": "2020-04-26T22:00:00.000Z",
      "id": "75b799a1-a406-419b-a448-909aa3d34afa",
      "name": "Test_Assignment 07 (Java) Testat Evaluated",
      "points": 100,
      "startDate": "2020-04-19T22:00:00.000Z",
      "state": "EVALUATED",
      "type": "TESTAT",
    },
  ],
  "results": [
    {
      "achievedPoints": [
        75,
        25,
      ],
      "assessmentIds": [
        "8f60f844-4129-48a4-a625-7a74c7defd0d",
        "932c7bd8-2338-4e60-955a-39da5f858212",
      ],
      "student": {
        "displayName": "Max Mustermann",
        "email": "max.mustermann@test.com",
        "matrNr": 123456,
        "role": "STUDENT",
        "userId": "a019ea22-5194-4b83-8d31-0de0dc9bca53",
        "username": "mmustermann",
      },
    },
  ],
}
`;
